[package]
name = "haveibeenrusted"
version = "0.1.2"
edition = "2021"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
repository = "https://github.com/mztikk/haveibeenrusted"
license = "MIT"
description = "library to call the haveibeenpwned api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["gzip", "brotli"] }
sha1 = "0.10.5"
base16ct = { version = "0.2.0", features = ["alloc"] }
thiserror = "1.0.40"
